<resources>
    <string name="app_name">SJII</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history1">"We have not wings, we cannot soar; but, we have feet to scale and climb, by slow degrees, by more and more, the cloudy summits of our time.” - H. W. Longfellow  The pioneers of the St. Joseph’s Indian Institutions in Bangalore were men of great vision and calibre. Their dreams too began to take shape on the summit of a hill – St. John’s Hill where the St. Francis Xavier’s Cathedral now stands. In 1841, Bishop Bonnaud had the dream of starting an educational institution on that hill. The whole area was a little wood replete with trees. It was called a ‘Garden’. A plot of land was purchased for Rs. 1000/- and in 1854, Fr. Bouteloup had a house constructed at a cost Rs. 3000/- and the house was named St. Joseph’s Seminary. It had an orphanage and a residential school. People laughed at the idea because the place was uninhabited and a school in a little wood far from human settlements would serve no purpose. Time proved the French priests of the Paris Mission (MEP) right.  Bangalore then came under the Madras Presidency. The Madras University was established in 1858. Fr. Charbonnaux who was in-charge of the school made this entry in his diary; “We decided to open a school for European boys. As knowledge of English is necessary to our Indian pupils and that of Canarese to the European boy we determined to build a wing and a kitchen adjoining the Seminary.” This was the beginning of St. Joseph’s College. The year 1865 saw the rise of a new house to accommodate the orphans and boarders of the school. Placing all the three departments – the seminary, the orphanage and the school to function in the same building. So in 1875 the orphanage was transferred to St. Patrick’s Church where it still exists on the Church premises as St. Patrick’s Orphanage. With the Seminary being closed down, only the school remained on the campus. The school had a total of 144 students, 64 boarders and 80 day scholars.  The next important development was the change made in 1882 by the very able new Rector, Fr. Maurice Vissac. He had the school affiliated to the Madras University as a second grade college. It could then prepare students for the F.A. (First Arts) exams. Two candidates appeared for this exam in 1884 and were successful.  Being a part of those MEP priests who were men of vision, Fr. Vissac couldn’t rest contented. He felt the need of shifting the school to the heart of the Cantonment. A property called Rocklands which lay adjacent to the Madras Bank (now known as the State Bank of India) was bought. In 1894 he laid the foundation stone for the rise of the new school on that property that was skirted by the Museum Road and the Residency Road. Meanwhile two priests – Fr. Froger and Fr. Schmitt who were sent to England for higher studies returned after completing their postgraduate studies at the London University. "</string>
    <string name="history2">It was in 1898 that the school was transferred from St. John’s Hill to the new building on the Museum Road. It grew in strength and in 1903 it had 100 boarders and 57 day scholars. An extensive playground called the New Fields was bought. It lay on the Eastern side of what was then a mud embankment road that separated the Sampangi tank from the New Fields ground. That road would later become the Grant Road and then the Vittal Mallya Road. It did take a lot of time and energy to see that the tank bed was drained out to prepare the sprawling playgrounds for the students. Meanwhile, the French priests had yet another dream – a school for the Indian students. In 1904, Fr. Blaise became the first Principal of the Indian High School that began in the stuffy cellars of the European High School. He realized that it was proper that the Indian High School had its own building.

That wonderful dream began to be transposed to reality with the coming of Fr. Aucouturier in 1912 as the next Principal of the Indian High School. Thanks to the generosity of Fr. Froger who gifted his personal property – the Thornley Bank- situated at the junction of the Residency Road and Museum Road for the construction of the new building. Thanks to a Government grant of Rs. 30.000, coupled with Fr. Vissac’s plans and the ever willing support of Mr Yates, Inspector of Schools, Bangalore and Coorg. Fr.Aucouturier was able to realize his dream of erecting a magnificient building on the ruins of Thornley Bank. This great structure that was later touched up with a beautiful stretch of mistletoe soon became a landmark on the Museum Road and still stands to this day as a tribute to the ingenious efforts of Fr.Aucouturier.

In 1923, the Intermediate classes at the St. Joseph’s European High were shifted to the top floor of the new Indian High School building. Work soon began on the building to accommodate the College section. In 1928, the St. Joseph’s College offering the B.A. degree was inaugurated. Thus three distinct institutions – St. Joseph’s European High School, St. Joseph’s Indian High School and St. Joseph’s College – came to be on the same campus under three distinct Principals and one Rector.

The World War I (1914 – 1918) took its toll even on the availability of the French Fathers (MEP) to carry on their great educational enterprise. Hence the Bishop of Mysore, Msgr. Despastures under whose jurisdiction Bangalore came at that time, began to lookout for another religious order of men who could continue the grand work of the MEP Fathers. His earlier attempt to draw in the services of the Jesuits, the Priests of the Society of Jesus founded by St. Ignatius Loyola, who were well known throughout the world as educationists to take over these institutions had failed. The Bishop now made a second attempt. He appealed to the General of the Jesuits in Rome. The General appointed Fr. Van Kalken as the Visitor to study the matter on the spot. In February 1937 he informed the Superior of the Jesuit Mission in Mangalore that Fr. General had acceded to the request of the Bishop of Mysore.

Thus in 1937, all the institutions managed by the MEP Fathers in Bangalore – the European High School and boarding house, the Indian High School and St. Louis Boarding House and St. Joseph’s College along with the extensive playgrounds at New Fields, Lal Bagh Road and South Parade (M.G. Road) were thus transferred to Jesuit Management. Today these are managed by the Bangalore Jesuit Educational Society which comes under the Karnataka Jesuit Educational Society.
</string>
    <string name="history3">It was during the tenure of Fr Valerian Farias S.J. that the next great move in the history of St. Joseph’s Indian High School took place. At this time Rev. Fr. General of the Society of Jesus gave the use of the New Fields to St. Joseph’s Indian High School. The Indian High School in return was asked to hand over the play grounds on M. G. Road as well as the grounds and the building of St. Louis Boarding House on the Brigade Road. By 1972, the St. Joseph’s Indian High School together with the St. Louis Boarding House shifted to the New Field Grounds. Rev. Fr. Charles Andrade, S. J., was instrumental in the extension and the completion of the new High School building, the residence of the Jesuit Fathers and Brothers and the St. Louis Boarding House as it is today.

Soon, great encouragement was given to the field of sports during the time of Fr. Sunith Prabhu, S.J. It was then that the school was adopted by The Sports Authority of India (SAI) and was the first school in Karnataka State to enjoy the benefits offered by the SAI. The Swimming Pool and the Gymnasium were built at this time. Coaches from the SAI have been training our students since then. In 1979 when the school celebrated its Platinum Jubilee, the St. Joseph’s Auditorium was built during the time when Fr. Sunith Prabhu, S.J. was the Principal. The SAI Hostel for the students was built during the time of Fr. Lawrence Pinto, S.J.
</string>
    <string name="history4">The School completed its glorious hundred years during the academic year 2003-2004. The Centenary celebration was not a moment for the management and the staff to rest. It was during the Centenary Celebrations that yet another great dream was placed before the students, the parents and the alumni – a new building to house the High School and the PU College. Thanks to the effort of Fr. Melwin Pinto, S.J., the support of so many benefactors like Mrs. Vijayalakshmi Ekanandan and the parents of the students at the school then, the new building was inaugurated on 4th December 2006 by His Grace, the Most Rev. Bernard Moras, Archbishop of Bangalore in the presence of Fr. Vijay Prabhu, S.J., the Provincial of the Jesuits of Karnataka, Mrs. Vijayalakshmi Ekanandan our great benefactress and Brig. Clement Samuel, an alumnus of our school and a large gathering of students, parents and well-wishers.</string>
    <string name="history5">In 2007 came yet another development on the campus – the appearance of the St. Joseph’s Indian Community College with Fr. Francis Guntipilly, S.J. as its Director. This College conducts courses for the rural unemployed youth and helps them to get employment. This institution has been known over the years for the concern it has shown towards its students from the poorer and weaker sections of society. The Community College is another venture to express our social concern.

St. Joseph’s Indian Institution is still growing and moving into the future. As long as there are the young to be taught and formed, the work will be unfinished. To conclude in the words of the great artist Pablo Picasso:

“To finish a work? To finish a picture? What nonsense! To finish it means to be through with it, to kill it, to rid it of its soul, to give it its final blow, the coup de grace for the painter as well as the picture.”

So with ‘Faith and Toil’ the St. Joseph’s Indian Institution keeps moving on.

© 2015 St.</string>
    <string name="vision">St Joseph’s Indian Institutions are dedicated to form men and women of conscience, competence, compassion and commitment, to build a just and humane society</string>
    <string name="mission">Rooted in Christ and committed to the poor, this Jesuit institution in partnership with the people of goodwill, strives to form men and women for others. With our motto ‘Faith and Toil’, we aim to impart holistic formation to our students with academic excellence, value-based leadership, critical thinking, innovative spirit, ecological concern, accomplishment in sports and games and commitment to justice. These institutions uphold respect for all religions, cultures and languages; promote national integration, democratic values and human rights. While assisting our students in their integral formation in a safe and nurturing environment, we place greater emphasis on developing compassionate hearts by fostering habits of personal prayer, reflection and service for the greater glory of God</string>
    <string name="coreValues">Faith in God\nAcademic Excellence\nPreferential option for the poor\nIntegral Formation\nLay - Jesuit Collaboration\nValue based Leadership</string>
</resources>
