<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutUsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfairdisplay_regular"
                android:gravity="center|start"
                android:padding="5sp"
                android:text="VISION"
                android:textColor="@color/colorBlue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri_regular"
                android:padding="5sp"
                android:text="@string/vision" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfairdisplay_regular"
                android:gravity="center|start"
                android:padding="5sp"
                android:text="MISSION"
                android:textColor="@color/colorBlue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri_regular"
                android:padding="5sp"
                android:text="@string/mission" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfairdisplay_regular"
                android:gravity="center|start"
                android:padding="5sp"
                android:text="Core Values"
                android:textColor="@color/colorBlue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri_regular"
                android:padding="5sp"
                android:text="@string/coreValues" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfairdisplay_regular"
                android:gravity="center|start"
                android:padding="5sp"
                android:text="HISTORY"
                android:textColor="@color/colorBlue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri_regular"
                android:padding="5sp"
                android:text="@string/history1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri_regular"
                android:gravity="center|start"
                android:padding="5sp"
                android:text="College Building in 1904"
                android:textColor="@color/colorBlue"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:scaleType="centerCrop"
                android:src="@drawable/history1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri_regular"
                android:padding="5sp"
                android:text="@string/history2" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:scaleType="centerCrop"
                android:src="@drawable/history2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri_regular"
                android:padding="5sp"
                android:text="@string/history3" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:scaleType="centerCrop"
                android:src="@drawable/history3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri_regular"
                android:padding="5sp"
                android:text="@string/history4" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:scaleType="centerCrop"
                android:src="@drawable/history4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiri_regular"
                android:padding="5sp"
                android:text="@string/history5" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>