<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisionActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfairdisplay_regular"
            android:gravity="center|start"
            android:padding="5sp"
            android:text="VISION"
            android:textColor="@color/colorBlue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiri_regular"
            android:padding="5sp"
            android:text="@string/vision" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfairdisplay_regular"
            android:gravity="center|start"
            android:padding="5sp"
            android:text="MISSION"
            android:textColor="@color/colorBlue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiri_regular"
            android:padding="5sp"
            android:text="@string/mission" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfairdisplay_regular"
            android:gravity="center|start"
            android:padding="5sp"
            android:text="Core Values"
            android:textColor="@color/colorBlue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiri_regular"
            android:padding="5sp"
            android:text="@string/coreValues" />


    </LinearLayout>
</ScrollView>
</LinearLayout>